# decode-orc

./: .clang-format  .claudeignore  .gitignore  .gitmodules  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  README.md  TESTING.md  flake.nix  io.github.simoninns.decode-orc.yml  vcpkg.json
orc/: .clang-tidy  CMakeLists.txt
orc-tests/: CMakeLists.txt
orc-tests/core/functional/: CMakeLists.txt
orc-tests/core/integration/: CMakeLists.txt
orc-tests/core/unit/: CMakeLists.txt  factories_interface_mock.h  stage_services_mock.h
orc-tests/fixtures/external-stage-plugin/: CMakeLists.txt  fixture_passthrough_stage.h  plugin.cpp
orc-tests/gui/integration/: CMakeLists.txt
orc-tests/gui/unit/: CMakeLists.txt  analysis_dialog_smoke_test.cpp  config_dialog_base_test.cpp  dropout_editor_dialog_test.cpp  dropout_frame_view_test.cpp  field_frame_presentation_test.cpp  field_preview_crosshair_test.cpp  frame_view_geometry_test.cpp  framescopedialog_test.cpp  frametimingdialog_test.cpp  gui_project_test.cpp  gui_test_logging_stub.cpp  line_navigation_mapper_test.cpp  node_type_helper_port_test.cpp  node_type_helper_test.cpp  orc_graph_model_test.cpp  plugin_browse_dialog_test.cpp  plugin_discovery_model_test.cpp  preview_dialog_playback_test.cpp  project_properties_dialog_test.cpp  quick_project_planner_test.cpp  render_coordinator_test.cpp  stage_parameter_dialog_test.cpp  theme_controller_test.cpp  theme_manager_test.cpp  vectorscope_geometry_test.cpp  widget_harness_smoke_test.cpp
orc/cli/: CMakeLists.txt  command_filter.cpp  command_filter.h  command_plugins.cpp  command_plugins.h  command_process.cpp  command_process.h  filtergraph_parser_test.cpp  markdown_examples.cpp  markdown_examples.h  markdown_examples_test.cpp  orc_cli.cpp  stage_category.cpp  stage_category.h
orc/common/: CMakeLists.txt  crash_handler.cpp  logging.cpp  node_id.cpp  parameter_util.cpp
orc/common/include/: amplitude_conversion.h  common_types.h  crash_handler.h  cvbs_signal_constants.h  error_types.h  field_id.h  frame_numbering.h  line_numbering.h  logging.h  node_id.h  node_type.h  parameter_types.h
orc/core/: CMakeLists.txt  artifact.cpp  colour_preview_conversion.cpp  core_observation_service.cpp  crash_handler.cpp  curl_http_fetcher.cpp  dag_executor.cpp  dag_field_renderer.cpp  dag_frame_renderer.cpp  dag_serialization.cpp  dropout_decision.cpp  dropout_util.cpp  eia608_decoder.cpp  factories.cpp  factories.h  factories_interface.h  field_id.cpp  logging.cpp  node_type.cpp  observation_cache.cpp  observation_context.cpp  observer_config.cpp  pipeline_validator.cpp  plugin_artifact_name.cpp  plugin_index.cpp  plugin_index_client.cpp  plugin_remote_loader.cpp  preview_helpers.cpp  preview_renderer.cpp  preview_view_registry.cpp  project.cpp  project_to_dag.cpp  sha256_hash.cpp  stage_parameter.cpp  stage_plugin_loader.cpp  stage_plugin_registry.cpp  stage_registry.cpp  tbc_reader.cpp  tbc_video_field_representation.cpp  tbc_yc_video_field_representation.cpp  (+3 more)
orc/core/analysis/: analysis_context.h  analysis_init.cpp  analysis_init.h  analysis_progress.h  analysis_registry.cpp  analysis_registry.h  analysis_result.h  analysis_tool.h
orc/core/hints/: active_line_hint.h  field_parity_hint.h  hint.h  pal_phase_hint.h
orc/core/include/: artifact.h  buffered_file_io.h  colour_preview_conversion.h  colour_preview_provider.h  core_observation_service.h  crash_handler.h  curl_http_fetcher.h  cvbs_signal_constants.h  dag_executor.h  dag_field_renderer.h  dag_frame_renderer.h  dag_serialization.h  dropout_decision.h  eia608_decoder.h  field_id.h  file_io_interface.h  http_fetcher.h  line_numbering.h  logging.h  lru_cache.h  observation_cache.h  observation_context.h  observation_context_interface.h  observation_schema.h  observer_config.h  pipeline_validator.h  plugin_artifact_name.h  plugin_index.h  plugin_index_client.h  plugin_remote_loader.h  plugin_safe_call.h  preview_helpers.h  preview_renderer.h  preview_stage_types.h  preview_view_registry.h  previewable_stage.h  project.h  project_to_dag.h  sha256_hash.h  stage_custom_preview_renderer.h  (+13 more)
orc/core/metadata/: CMakeLists.txt  dropouts.cpp  dropouts.h  jsonio.cpp  lddecodemetadata.cpp  lddecodemetadata.h  logging.h  open_tbc_metadata.cpp  tbc_metadata.cpp  tbc_metadata_json_reader.cpp  tbc_metadata_writer.cpp
orc/core/observers/: biphase_observer.cpp  biphase_observer.h  black_psnr_observer.cpp  black_psnr_observer.h  burst_level_observer.cpp  burst_level_observer.h  closed_caption_observer.cpp  closed_caption_observer.h  colour_frame_phase_observer.cpp  colour_frame_phase_observer.h  field_quality_observer.cpp  field_quality_observer.h  fm_code_observer.cpp  fm_code_observer.h  observer.cpp  observer.h  white_flag_observer.cpp  (+3 more)
orc/gui/: CMakeLists.txt  amplitude_unit_helpers.h  analysisdialogbase.cpp  analysisdialogbase.h  burstlevelanalysisdialog.cpp  burstlevelanalysisdialog.h  configdialogbase.cpp  configdialogbase.h  dropout_editor_dialog.cpp  dropout_editor_dialog.h  dropoutanalysisdialog.cpp  dropoutanalysisdialog.h  ffmpegpresetdialog.cpp  ffmpegpresetdialog.h  field_frame_presentation.cpp  field_frame_presentation.h  fieldpreviewwidget.cpp  fieldpreviewwidget.h  fieldtimingdialog.cpp  fieldtimingdialog.h  fieldtimingwidget.cpp  fieldtimingwidget.h  frame_marker_slider.cpp  frame_marker_slider.h  frame_view_geometry.cpp  frame_view_geometry.h  frame_viewport_widget.cpp  frame_viewport_widget.h  framescopedialog.cpp  framescopedialog.h  frametimingdialog.cpp  frametimingdialog.h  frametimingwidget.cpp  frametimingwidget.h  generic_analysis_dialog.cpp  generic_analysis_dialog.h  guiproject.cpp  guiproject.h  hintsdialog.cpp  hintsdialog.h  (+69 more)
orc/plugins/: CMakeLists.txt
orc/presenters/: CMakeLists.txt
orc/sdk/: CMakeLists.txt  abi_history.yaml  sdk_headers.yaml
orc/view-types/: orc_analysis.h  orc_cvbs_source_parameters.h  orc_histogram.h  orc_preview_carriers.h  orc_preview_types.h  orc_preview_views.h  orc_rendering.h  orc_source_parameters.h  orc_vectorscope.h
(+884 files in other folders)
